--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
 .half_width{
     width: 50%;
     padding: 0 0 0 100px ;
@@ -37,4 +40,15 @@ h1{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom left;
+}
+.experience_items{
+    width: 40%;
+    margin-left: 5%;
+    padding: 0 30px 30px;
+    box-shadow: 10px 10px 10px 10px gray;
 }
